--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "pySigma-backend-dictquery"
 version = "0.1.3"
 description = "pySigma dictquery backend"
-authors = ["David B Heise <david.heise@unqork.com>"]
+authors = ["Unqork Security TDR <security-tdr@unqork.com>"]
 license = "MIT"
 repository = "https://github.com/tbd/pySigma-backend-dictquery"
 packages = [
